--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bme680-sensor",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "",
   "main": "./lib",
   "scripts": {},
@@ -18,7 +18,7 @@
   },
   "homepage": "https://gitlab.com/ftmazzone/bme680#README",
   "dependencies": {
-    "i2c": "^0.2.3"
+    "i2c-bus": "^4.0.1"
   },
   "files": [
     "lib/"
