Prepare project for unit testing

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.organization=ftmazzone-github
 sonar.projectVersion=0.1.2
  
 sonar.sources=lib
-#sonar.tests=unitTests
+sonar.tests=unitTests
 
 sonar.dynamicAnalysis=reuseReports
-#sonar.javascript.lcov.reportPaths=.nyc_output/reports/lcov.info
+sonar.javascript.lcov.reportPaths=.nyc_output/reports/lcov.info
