Begin implementaton of the unit tests for the class 'CalibrationData'

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "nyc": {
     "exclude": [
       "node_modules/**",
-      "tests/"
+      "examples/"
     ],
     "check-coverage": true,
     "all": true,
