--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
-sonar.projectKey=BME680
+sonar.projectKey=ftmazzone_BME680
 sonar.projectName=BME680
-sonar.organization=ftmazzone-github
+sonar.organization=ftmazzone
 sonar.projectVersion=0.1.8
  
 sonar.sources=lib
