--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,7 @@
-sonar.projectKey=ftmazzone_BME680
-sonar.projectName=BME680
+sonar.projectKey=ftmazzone_bme680
 sonar.organization=ftmazzone
+
+sonar.projectName=bme680
 sonar.projectVersion=0.1.8
  
 sonar.sources=lib
